objects/LLC_BI__Deposit__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Related_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional although it is automatically set during the CD Renewal Workflow. This field associates two deposit accounts.</description>
        <label>Related Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Related Deposits</relationshipLabel>
        <relationshipName>Related_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Under_Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the Relationship under maintenance in context of a Deposit record.</description>
        <inlineHelpText>Enter the Relationship name associated to the Deposit under maintenance.</inlineHelpText>
        <label>Relationship Under Maintenance</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maintenanced Deposits</relationshipLabel>
        <relationshipName>Maintenanced_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the interest rate at which the account will be renewed.</description>
        <inlineHelpText>Specifies the interest rate at which the account will be renewed.</inlineHelpText>
        <label>Renewal Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Basis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the new interest or dividend rate upon automatic renewal.</description>
        <inlineHelpText>The new interest or dividend rate upon automatic renewal.</inlineHelpText>
        <label>Renewal Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Number__c</fullName>
        <description>--DEPRECATED-- (Replacing with Routing_Transit_Number__c) -- Populate this number (9-digit) field with the 9 Digit ABA Number for the deposit account. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <label>-D Routing Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Transit_Number__c</fullName>
        <description>Populate this text field with the 9 Digit ABA Number for the deposit account. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Security_Deposit_Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the amount of any security deposit for the safe deposit box.</description>
        <inlineHelpText>The amount of any security deposit for the safe deposit box.</inlineHelpText>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Single_Life_Expectancy_Begins__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the year in which single life expectancy payments must begin.</description>
        <inlineHelpText>The year in which single life expectancy payments must begin.</inlineHelpText>
        <label>Single Life Expectancy Begins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Size_of_Box__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the size of the safe deposit box that is being leased.</description>
        <inlineHelpText>The size of the safe deposit box that is being leased.</inlineHelpText>
        <label>Size of Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist used to specify the stage that the deposit is in.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                    <default>true</default>
                    <label>Qualification</label>
                </value>
                <value>
                    <fullName>Signature Signed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist used to specify the status that the deposit is in.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding step.</description>
        <inlineHelpText>The interest rate that applies to the corresponding step.</inlineHelpText>
        <label>Step Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the corresponding step rate applies.</description>
        <inlineHelpText>Specifies the period of time the corresponding step rate will apply.</inlineHelpText>
        <label>Step Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the corresponding stepped rate applies.</description>
        <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
        <label>Step Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TFA_Activity_Type__c</fullName>
        <description>TFA Activity Type</description>
        <inlineHelpText>This indicates the type of activity that will be performed for the plan.</inlineHelpText>
        <label>TFA Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open a new plan</fullName>
                </value>
                <value>
                    <fullName>Manage or maintain an existing plan</fullName>
                </value>
                <value>
                    <fullName>Close an existing plan</fullName>
                    <isActive>false</isActive>
                    <label>Close an existing plan</label>
                </value>
                <value>
                    <fullName>Request information for an existing plan</fullName>
                    <isActive>false</isActive>
                    <label>Request information for an existing plan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Year_of_First_Roth_Contribution__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the tax year of first Roth IRA contribution or conversion.</description>
        <inlineHelpText>The tax year of first Roth IRA contribution or conversion.</inlineHelpText>
        <label>Tax Year of First Roth Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Type__c</fullName>
        <description>This picklist field is required for CD&apos;s and is manually populated. The picklist values are the time periods used to describe the length of a certificate term. It is used in conjunction with the number field that specifies the number of terms.</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>day(s)</fullName>
                </value>
                <value>
                    <fullName>month(s)</fullName>
                </value>
                <value>
                    <fullName>quarter(s)</fullName>
                </value>
                <value>
                    <fullName>year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding tier.</description>
        <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
        <label>Tiered Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Margin_Percent__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</description>
        <inlineHelpText>The percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</inlineHelpText>
        <label>Tiered Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vault_Key_Description__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes any vault keys that have been issued for the safe deposit box.</description>
        <inlineHelpText>A description of any vault keys that have been issued for the safe deposit box.</inlineHelpText>
        <label>Vault Key Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isConvert__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a hidden field used for reporting purposes, such as number of deposits converted from a lead.</description>
        <label>isConvert</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This manually populated field is an external, unique key. This field is used to link the deposit in nCino to the deposit in the financial institution’s Core.</description>
        <externalId>true</externalId>
        <inlineHelpText>The deposit number is an external, unique key for this deposit. This field is used when syncing nCino with the financial institution’s core.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deposit</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>